# DocIntel--RAG-with-RAGAS-Eval-Hybrid-Search-Drift-Monitoring

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  LIVE_VERIFICATION_SUCCESS.md  README.md  VERIFICATION_ATTEMPT.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  key_test_result.txt  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_foundation.py  002_documents_and_chunks.py  003_queries_retrievals_answers.py  004_eval_runs_and_cases.py  005_drift_reports.py
apps/api/src/docintel/: __init__.py  auth.py  config.py  database.py  logging_setup.py  main.py
apps/api/src/docintel/models/: __init__.py  answer.py  chunk.py  citation.py  document.py  drift_report.py  eval_case.py  eval_run.py  query.py  retrieval.py
apps/api/src/docintel/routers/: __init__.py  answer.py  documents.py  drift.py  eval.py  health.py  metrics.py  search.py
apps/api/src/docintel/schemas/: __init__.py  answer.py  common.py  document.py  drift.py  eval.py  search.py
apps/api/src/docintel/tools/: __init__.py  benchmark_retrieval.py  (+4 more)
apps/api/tests/: __init__.py  conftest.py  test_answer_endpoint.py  test_bm25.py  test_chunker.py  test_citation_extractor.py  test_documents.py  test_drift_runner.py  test_embedder.py  test_eval_runner.py  test_fusion.py  test_health.py  test_metrics.py  test_reranker.py  test_search_endpoint.py  test_tracing_middleware.py  test_vector.py
apps/dashboard/: .dockerignore  Dockerfile  app.py  pyproject.toml
apps/dashboard/lib/: api_client.py  db.py
apps/dashboard/pages/: 1_Eval_Trends.py  2_Drift_Reports.py  3_Cost_and_Latency.py  4_Retrieval_Explorer.py
apps/dashboard/tests/: test_db_queries.py
(+46 files in other folders)
